# neuromancer

./: README.md  pyproject.toml  release_1.3.2.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: index.rst
docs/psl/: autonomous.rst  emulator.rst
docs/slim/: linear.rst
examples/control/: double_integrator_DPC_interactive.ipynb
examples/system_identification/: duffing_parameter_interactive.ipynb  lorenz_control_diffeqnode_curriculum.py  two_tank_neural_ssm.py
examples/tutorials/: dataset_tutorial.py
neuromancer/: __init__.py  maps.py  simulator.py
neuromancer/psl/: __init__.py
src/neuromancer/: dataset.py
src/neuromancer/psl/: __init__.py  ssm.py
tests/: test_simulator.py
tests/psl/: all_systems_test.py
